# wakatime-focusd

./: CHANGELOG.md  Cargo.toml  Justfile  PLAN.md  README.md  dist-workspace.toml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
contrib/: config.toml  wakatime-focusd.service
src/: api.rs  api_key.rs  backend.rs  config.rs  config_template.toml  domain.rs  focus.rs  heartbeat.rs  idle.rs  lib.rs  main.rs  service.rs  throttle.rs  wakatime.rs
src/backend/: cosmic.rs  gnome.rs  hyprland.rs  kde.rs  mod.rs  niri.rs  sway.rs  wlr_foreign_toplevel.rs  x11.rs
src/focus/: hyprland_ipc.rs  mod.rs
src/idle/: logind.rs
tests/: cli.rs  daemon_pipeline.rs  dbus_gnome.rs  dbus_kde.rs  socket_hyprland.rs  socket_niri.rs  socket_sway.rs  wayland_cosmic.rs  wayland_wlr_foreign_toplevel.rs  x11_xvfb.rs
tests/cmd/: config-dump-help.trycmd  config-help.trycmd  config-init-help.trycmd  help.trycmd  invalid-subcommand.trycmd  oneshot-help.trycmd  service-help.trycmd  service-install-help.trycmd  service-status-help.trycmd  service-uninstall-help.trycmd  update-help.trycmd  version.trycmd
