[package]
name = "wakatime-focusd"
version = "0.1.2"
edition = "2024"
description = "Systemd user daemon for WakaTime app heartbeats"
license = "MIT"
repository = "https://github.com/joshuadavidthomas/wakatime-focusd"
keywords = ["wakatime", "hyprland", "wayland", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "process", "sync", "io-util"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[[bin]]
name = "wakatime-focusd"
path = "src/main.rs"
