[package]
name = "wakatime-focusd"
version = "0.1.3"
edition = "2024"
description = "Systemd user daemon for WakaTime app heartbeats"
license = "MIT"
repository = "https://github.com/joshuadavidthomas/wakatime-focusd"
keywords = ["wakatime", "hyprland", "wayland", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3.32"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "process", "sync", "io-util"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
x11rb = { version = "0.13.2", features = ["extra-traits"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
dbus-launch = "0.2.0"
libc = "0.2"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util", "sync"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[lib]
name = "wakatime_focusd"
path = "src/lib.rs"

[[bin]]
name = "wakatime-focusd"
path = "src/main.rs"
