[package]
name = "wakatime-focusd"
version = "0.3.0"
edition = "2024"
description = "Systemd user daemon for WakaTime app heartbeats"
license = "MIT"
repository = "https://github.com/joshuadavidthomas/wakatime-focusd"
keywords = ["wakatime", "hyprland", "wayland", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3.32"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "process", "sync", "io-util", "signal"] }
toml = "1"
tracing = "0.1"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
x11rb = { version = "0.13.2", features = ["extra-traits"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
cosmic-protocols = { version = "0.2", default-features = false, features = ["client"] }
wayland-protocols = { version = "0.32", features = ["staging", "client"] }
tokio-util = "0.7.18"
axoupdater = { version = "0.10.0", features = ["github_releases"] }

[dev-dependencies]
cosmic-protocols = { version = "0.2", features = ["server"] }
dbus-launch = "0.2.0"
libc = "0.2"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util", "sync"] }
trycmd = "1"
wayland-protocols = { version = "0.32", features = ["staging", "server"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
wayland-server = "0.31"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[lib]
name = "wakatime_focusd"
path = "src/lib.rs"

[[bin]]
name = "wakatime-focusd"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
